--- a/packages/react-use/tsconfig.json
+++ b/packages/react-use/tsconfig.json
@@ -9,7 +9,9 @@
     "esModuleInterop": true,
     "moduleResolution": "node",
     "skipLibCheck": true,
-    "jsx": "react"
+    "jsx": "react-jsx"
   },
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
