chore(react-use): add dev script

--- a/packages/react-use/package.json
+++ b/packages/react-use/package.json
@@ -7,6 +7,7 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts",
+    "dev": "tsup src/index.ts --watch --format esm,cjs --dts",
     "test": "vitest"
   },
   "exports": {
