--- a/package.json
+++ b/package.json
@@ -3,43 +3,22 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite --port 3000",
-    "docs:dev": "vitepress dev docs --port 3001",
-    "start": "vite --port 3000",
-    "build": "vite build && tsc",
-    "serve": "vite preview",
-    "test": "vitest run",
+    "docs:dev": "vitepress dev docs --port 3000",
+    "build": "vitepress build docs",
     "lint": "eslint",
     "format": "prettier",
     "check": "prettier --write . && eslint --fix"
   },
   "dependencies": {
-    "@mdx-js/react": "^3.1.0",
-    "@mdx-js/rollup": "^3.1.0",
-    "@tanstack/react-router": "^1.114.3",
-    "@tanstack/react-router-devtools": "^1.114.3",
-    "@tanstack/router-plugin": "^1.114.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-use": "workspace:*",
-    "vite-plugin-mdx": "^3.6.1"
+    "react-use": "workspace:*"
   },
   "devDependencies": {
-    "@tanstack/eslint-config": "^0.1.0",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/react": "^16.2.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "@unocss/reset": "^66.1.1",
-    "@vitejs/plugin-react": "^4.3.4",
-    "jsdom": "^26.0.0",
     "prettier": "^3.5.3",
-    "tsup": "^8.4.0",
     "typescript": "^5.7.2",
-    "unocss": "^66.1.1",
-    "vite": "^6.1.0",
-    "vitepress": "^1.6.3",
-    "vitest": "^3.0.5",
-    "web-vitals": "^4.2.4"
+    "vitepress": "^1.6.3"
   }
 }
