--- a/packages/react-use/package.json
+++ b/packages/react-use/package.json
@@ -26,6 +26,8 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@vitest/ui": "3.1.3",
+    "jsdom": "^26.1.0",
+    "tsup": "^8.5.0",
     "vitest": "^3.1.3"
   }
 }
