--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "@react-use/docs",
-  "private": true,
   "type": "module",
+  "private": true,
   "scripts": {
     "docs:dev": "vitepress dev docs --port 3000",
     "build": "vitepress build docs",
     "lint": "eslint",
-    "format": "prettier",
-    "check": "prettier --write . && eslint --fix"
+    "lint:fix": "eslint --fix"
   },
   "dependencies": {
     "react": "^19.0.0",
@@ -15,9 +14,14 @@
     "react-use": "workspace:*"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^4.13.2",
+    "@eslint-react/eslint-plugin": "^1.49.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "prettier": "^3.5.3",
+    "eslint": "^9.28.0",
+    "eslint-plugin-format": "^1.0.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "typescript": "^5.7.2",
     "vitepress": "^1.6.3"
   }
