--- a/packages/react-use/tsconfig.json
+++ b/packages/react-use/tsconfig.json
@@ -1,15 +1,15 @@
 {
   "compilerOptions": {
     "target": "ESNext",
+    "jsx": "react-jsx",
     "module": "ESNext",
+    "moduleResolution": "node",
+    "strict": true,
     "declaration": true,
     "declarationDir": "dist",
     "outDir": "dist",
-    "strict": true,
     "esModuleInterop": true,
-    "moduleResolution": "node",
-    "skipLibCheck": true,
-    "jsx": "react-jsx"
+    "skipLibCheck": true
   },
   "include": [
     "src"
