--- a/packages/react-use/package.json
+++ b/packages/react-use/package.json
@@ -22,6 +22,7 @@
     "react": "^19.1.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/react-hooks": "^8.0.1",
