fix: add missing files field in package.json

--- a/packages/use-reacty/package.json
+++ b/packages/use-reacty/package.json
@@ -28,6 +28,11 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
+  "files": [
+    "*.d.ts",
+    "*.js",
+    "*.mjs"
+  ],
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts",
     "dev": "tsup src/index.ts --watch --format esm,cjs --dts",
