--- a/packages/use-reacty/package.json
+++ b/packages/use-reacty/package.json
@@ -39,10 +39,12 @@
     "test": "vitest",
     "test:ui": "vitest --ui"
   },
-  "dependencies": {
-    "react": "^19.1.0"
+  "peerDependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "react": "^19.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
