--- a/packages/use-reacty/package.json
+++ b/packages/use-reacty/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.2",
   "description": "React hooks library",
   "license": "MIT",
+  "author": "Xenos112 <https://github.com/Xenos112>",
   "homepage": "https://github.com/Xenos112/use-reacty#readme",
   "repository": {
     "type": "git",
