--- a/packages/use-reacty/package.json
+++ b/packages/use-reacty/package.json
@@ -35,8 +35,8 @@
     "*.mjs"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --dts",
-    "dev": "tsup src/index.ts --watch --format esm,cjs --dts",
+    "build": "tsup --format esm,cjs --dts",
+    "dev": "tsup --watch --format esm,cjs --dts",
     "test": "vitest",
     "test:ui": "vitest --ui"
   },
@@ -54,5 +54,13 @@
     "jsdom": "^26.1.0",
     "tsup": "^8.5.0",
     "vitest": "^3.1.3"
+  },
+  "tsup": {
+    "entry": [
+      "src/index.ts"
+    ],
+    "splitting": false,
+    "sourcemap": true,
+    "clean": true
   }
 }
