--- a/packages/use-reacty/package.json
+++ b/packages/use-reacty/package.json
@@ -38,20 +38,22 @@
     "build": "tsup --format esm,cjs --dts",
     "dev": "tsup --watch --format esm,cjs --dts",
     "test": "vitest",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage"
   },
   "peerDependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "react": "^19.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/react-hooks": "^8.0.1",
+    "@vitest/coverage-v8": "3.2.1",
     "@vitest/ui": "3.1.3",
     "jsdom": "^26.1.0",
+    "react": "^19.1.0",
     "tsup": "^8.5.0",
     "vitest": "^3.1.3"
   },
