chore(vitepress): add preview entry in package.json

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "docs:dev": "vitepress dev docs --port 3000",
     "dev": "pnpm -r --parallel run \"/^(docs:dev|dev)$/\"",
     "build": "vitepress build docs",
+    "preview": "vitepress preview docs",
     "lint": "eslint",
     "lint:fix": "eslint --fix"
   },
