--- a/packages/use-reacty/package.json
+++ b/packages/use-reacty/package.json
@@ -30,9 +30,7 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "files": [
-    "*.d.ts",
-    "*.js",
-    "*.mjs"
+    "dist/*"
   ],
   "scripts": {
     "build": "tsup --format esm,cjs --dts",
