--- a/packages/use-reacty/package.json
+++ b/packages/use-reacty/package.json
@@ -33,8 +33,8 @@
     "dist/*"
   ],
   "scripts": {
-    "build": "tsup --format esm,cjs --dts",
-    "dev": "tsup --watch --format esm,cjs --dts",
+    "build": "tsup",
+    "dev": "tsup --watch",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage"
