--- a/packages/use-reacty/package.json
+++ b/packages/use-reacty/package.json
@@ -4,7 +4,7 @@
   "description": "React hooks library",
   "author": "Xenos112 <https://github.com/Xenos112>",
   "license": "MIT",
-  "homepage": "https://github.com/Xenos112/use-reacty#readme",
+  "homepage": "use-reacty.vercel.app",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Xenos112/use-reacty.git",
