--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "docs:dev": "vitepress dev docs --port 3000",
+    "docs:dev": "pnpm docs:gen && vitepress dev docs --port 3000",
+    "docs:gen": "tsx ./scripts/docsGen.ts",
     "dev": "pnpm -r --parallel run \"/^(docs:dev|dev)$/\"",
-    "build": "vitepress build docs",
+    "build": "pnpm docs:gen && vitepress build docs",
     "preview": "vitepress preview docs",
     "lint": "eslint",
     "lint:fix": "eslint --fix"
@@ -18,12 +19,14 @@
   "devDependencies": {
     "@antfu/eslint-config": "^4.13.2",
     "@eslint-react/eslint-plugin": "^1.51.0",
+    "@types/node": "^24.0.3",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
     "eslint": "^9.28.0",
     "eslint-plugin-format": "^1.0.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "vitepress": "^1.6.3"
   }
